# ml_web_app

./: .gitignore  Makefile  README.md  dockerfile  requirements.txt  setup.cfg
ml_for_nature/: __main__.py  app_streamlit.py  tf_object_detection.py  viz_utils.py
ml_for_nature/test_images/: day_B_IMG_0028.xml  day_B_IMG_0186.xml  day_C_IMG_0076.xml  day_K_RCNX0902_6.xml  night_B_IMG_0231.xml  night_B_IMG_0372.xml  night_D_IMG_0037.xml  night_D_IMG_0054.xml  night_K_RCNX0127.xml  night_K_RCNX0323.xml  night_K_RCNX0509.xml  unknown_2020-10-03_Capreolus_capreolus_03_3.xml  unknown_2020-10-04_Martes_foina_01_6.xml  unknown_2020-10-19_Martes_foina_08_1.xml  unknown_2020-10-21_Capreolus_capreolus_1.xml  unknown_2020-10-28_Sus_scrofa_05_2.xml  unknown_2020-10-30_Capreolus_capreolus_01_3.xml  unknown_2020-10-30_Capreolus_capreolus_02_4.xml  unknown_2020-11-04_Sus_scrofa_02_6.xml  unknown_2020-11-20_Martes_foina_02_4.xml  unknown_2020-11-21_Vulpes_vulpes_18_3.xml  unknown_2020-11-30_Martes_foina_03_6.xml  unknown_2020-12-13_Martes_foina_11_10.xml  unknown_2020-12-25_Vulpes_vulpes_05_2.xml  unknown_2021-01-29_Sus_scrofa_07_4.xml  unknown_2021-01-29_Sus_scrofa_12_8.xml  unknown_2021-03-02_Vulpes_vulpes_02_8.xml  unknown_2021-03-13_Capreolus_capreolus_9.xml
src/: app.py  app_streamlit.py  prediction.py  tf_object_detection.py  viz_utils.py
src/ml_utils/: tflite_object_detection.py
src/templates/: display.html  prediction_done.html
src/test_images/: day_A_IMG_0088.xml  day_B_IMG_0010.xml  (+30 more)
test/: test_acceptance.py  test_object_detection.py  test_prediction.py
(+202 files in other folders)
