[metadata]
name = ml_for_nature
version = 1.0
author = leo Babonnaud
platform = any
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers, DataScientists, MLEngineers
    Operating System :: OS Independent

[options]
zip_safe = false
packages = find:
install_requires =
    opencv-python==4.5.1.48
    tensorflow==2.8.0
    matplotlib==3.5.1
    Pillow==9.0.1
    streamlit==1.5.1
include_package_data = True
python_requires = >=3.9.9

[options.entry_points]
console_scripts =
    ml-for-nature = ml_for_nature.__main__:main